{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 305,
  "lineage": "212a4817-efd4-38f0-7b6a-aeb58c697369",
  "resources": [
    {
      "module": "module.controlnode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "controlnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:724772082485:instance/i-09e4bb140078739a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "control-node-profile",
            "id": "i-09e4bb140078739a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-022a3b6a8f53c6547"
              }
            ],
            "primary_network_interface_id": "eni-022a3b6a8f53c6547",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-13-218-189-130.compute-1.amazonaws.com",
            "public_ip": "13.218.189.130",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08048864d055e64b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081c0dbe9047a5daa",
            "tags": {
              "Name": "Control Node",
              "Role": "control"
            },
            "tags_all": {
              "Name": "Control Node",
              "Role": "control"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba67a6b42b981423"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "i-09e4bb140078739a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "module.controlnode.aws_iam_instance_profile.control_node_profile",
            "module.controlnode.aws_iam_role.control_node_role",
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.controlnode_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-0ba67a6b42b981423",
            "description": "This is Control Node Security Group",
            "egress": [],
            "id": "sg-0ba67a6b42b981423",
            "ingress": [],
            "name": "controlnode_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ControlNode-SG"
            },
            "tags_all": {
              "Name": "ControlNode-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f574b88b000be0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sg-0ba67a6b42b981423",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.controlnode_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-057fd566e3de2b3f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-057fd566e3de2b3f1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-057fd566e3de2b3f1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-057fd566e3de2b3f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.controlnode_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alertmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-045813046aa1e4ff1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9093,
            "id": "sgr-045813046aa1e4ff1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-045813046aa1e4ff1",
            "tags": null,
            "tags_all": {},
            "to_port": 9093
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-045813046aa1e4ff1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "grafana",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-09c132b9b9cedfd19",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-09c132b9b9cedfd19",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-09c132b9b9cedfd19",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-09c132b9b9cedfd19",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-098435ab8783e2b8b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-098435ab8783e2b8b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-098435ab8783e2b8b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-098435ab8783e2b8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-021990f80283a7a21",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-021990f80283a7a21",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-021990f80283a7a21",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-021990f80283a7a21",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "prometheus",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0a16214ef32ed026f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-0a16214ef32ed026f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-0a16214ef32ed026f",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0a16214ef32ed026f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-09b29912d4bec4af5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09b29912d4bec4af5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba67a6b42b981423",
            "security_group_rule_id": "sgr-09b29912d4bec4af5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-09b29912d4bec4af5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:internet-gateway/igw-048bf9121919060dc",
            "id": "igw-048bf9121919060dc",
            "owner_id": "724772082485",
            "region": "us-east-1",
            "tags": {
              "Name": "SEIF-IGW"
            },
            "tags_all": {
              "Name": "SEIF-IGW"
            },
            "vpc_id": "vpc-0a4f574b88b000be0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048bf9121919060dc",
            "id": "r-rtb-01da7b5935d092df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01da7b5935d092df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01da7b5935d092df7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:route-table/rtb-01da7b5935d092df7",
            "id": "rtb-01da7b5935d092df7",
            "owner_id": "724772082485",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f574b88b000be0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "rtb-01da7b5935d092df7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8bd4bcf0bdb973c",
            "region": "us-east-1",
            "route_table_id": "rtb-01da7b5935d092df7",
            "subnet_id": "subnet-081c0dbe9047a5daa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-081c0dbe9047a5daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c0dbe9047a5daa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public-Subnet1"
            },
            "tags_all": {
              "Name": "Public-Subnet1"
            },
            "vpc_id": "vpc-0a4f574b88b000be0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "subnet-081c0dbe9047a5daa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "YAKOUT-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:vpc/vpc-0a4f574b88b000be0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0129cee3f6d4d6dc0",
            "default_route_table_id": "rtb-087239e1af1dc9b7d",
            "default_security_group_id": "sg-0a8e33eae9e701b76",
            "dhcp_options_id": "dopt-0752c090f1368c13c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4f574b88b000be0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087239e1af1dc9b7d",
            "owner_id": "724772082485",
            "region": "us-east-1",
            "tags": {
              "Name": "SEIF-VPC"
            },
            "tags_all": {
              "Name": "SEIF-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "vpc-0a4f574b88b000be0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.webserver[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:724772082485:instance/i-05a65f71976cedc3d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a65f71976cedc3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09d268e16e48cde08"
              }
            ],
            "primary_network_interface_id": "eni-09d268e16e48cde08",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-34-200-239-32.compute-1.amazonaws.com",
            "public_ip": "34.200.239.32",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035620859516603b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081c0dbe9047a5daa",
            "tags": {
              "Name": "webserver0"
            },
            "tags_all": {
              "Name": "webserver0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d6cfb1837eaeb74"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "i-05a65f71976cedc3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        }
      ]
    },
    {
      "module": "module.webserver[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:724772082485:instance/i-018429fcf5dbb03aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018429fcf5dbb03aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0747c8ec12cd8cb19"
              }
            ],
            "primary_network_interface_id": "eni-0747c8ec12cd8cb19",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-44-204-95-59.compute-1.amazonaws.com",
            "public_ip": "44.204.95.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03bfa3d83f4820642",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081c0dbe9047a5daa",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d6cfb1837eaeb74"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "i-018429fcf5dbb03aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        }
      ]
    },
    {
      "module": "module.workernode_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-01d6cfb1837eaeb74",
            "description": "This is Worker Node Security Group",
            "egress": [],
            "id": "sg-01d6cfb1837eaeb74",
            "ingress": [],
            "name": "workernode_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WorkerNode-SG"
            },
            "tags_all": {
              "Name": "WorkerNode-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f574b88b000be0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sg-01d6cfb1837eaeb74",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.workernode_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0abaf210c4f8ac4ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0abaf210c4f8ac4ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-0abaf210c4f8ac4ae",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0abaf210c4f8ac4ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        }
      ]
    },
    {
      "module": "module.workernode_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cadvisor",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0d94a32d38730e460",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0d94a32d38730e460",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-0d94a32d38730e460",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0d94a32d38730e460",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        },
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0ea5c583b21bf4aa4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ea5c583b21bf4aa4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-0ea5c583b21bf4aa4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0ea5c583b21bf4aa4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-06bcf5ecf61e78e9e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-06bcf5ecf61e78e9e",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ba67a6b42b981423",
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-06bcf5ecf61e78e9e",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-06bcf5ecf61e78e9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        },
        {
          "index_key": "node-exporter",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0952bbb63f34568b5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9100,
            "id": "sgr-0952bbb63f34568b5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-0952bbb63f34568b5",
            "tags": null,
            "tags_all": {},
            "to_port": 9100
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0952bbb63f34568b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0c0e5f4fa676dbb7b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c0e5f4fa676dbb7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ba67a6b42b981423",
            "region": "us-east-1",
            "security_group_id": "sg-01d6cfb1837eaeb74",
            "security_group_rule_id": "sgr-0c0e5f4fa676dbb7b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772082485",
            "id": "sgr-0c0e5f4fa676dbb7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.controlnode_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC",
            "module.workernode_sg.aws_security_group.mySG"
          ]
        }
      ]
    }
  ]
}